# collector

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  deployer.py  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml  run.yaml  test.yaml
collector/: app_models.py  constants.py  helpers.py  playwright_manager.py  utils.py
collector/activities/: extract_comments.py  extract_post_activity.py  models.py  post_activity_flow.py
collector/companies/: company_flow.py  extract_company_metadata.py  search_results.py
collector/login/: login_page.py
collector/users/: extract_profile_metadata.py  extract_user_posts.py  get_user_activity.py  models.py  search_results.py  users_flow.py
infra/: env_template.yml.tpl
infra/manifests/: deployment.yaml  pvc.yaml  service.yaml
tests/: test_app.py  test_helpers.py  test_linkedin.py
